--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,26 @@
 {
 	"name": "Daytona",
 	"build": {
-		"dockerfile": "./Dockerfile"
+		"dockerfile": "Dockerfile",
+		"context": "."
 	},
 	"features": {
-		"ghcr.io/devcontainers/features/common-utils:1": {
-		  "installZsh": "true",
-		  "username": "daytona",
-		  "uid": "1000",
-		  "gid": "1000",
-		  "upgradePackages": "false"
-		},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
-		"ghcr.io/devcontainers/features/go:1": {},
-		"ghcr.io/devcontainers/features/node:1": {}
+		"ghcr.io/devcontainers/features/go:1": {
+			"version": "1.21.6"
+		},
+		// the features default node is the lts version
+		"ghcr.io/devcontainers/features/node:1": {},
+		"ghcr.io/guiyomh/features/goreleaser:0.1.1": {
+			"version": "1.24.0"
+		}
 	},
 	"containerEnv": {
 		"LOG_LEVEL": "debug",
 		"DAYTONA_SERVER_MODE": "development"
 	},
 	"postCreateCommand": {
-		"setup": "/setup/postcreate.sh",
-		"swag": "go install github.com/swaggo/swag/cmd/swag@v1.16.3"
+		"setup": "bash .devcontainer/postcreate.sh"
 	},
 	"remoteUser": "daytona"
 }
